# android-app

./: Readme.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: passphrase_words.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/res/color/: borderless_button_text_color.xml  drawer_item.xml  primary_button_color.xml  secondary_button_text_color.xml  secondary_button_text_color_inverted.xml  send_encrypted_button_color.xml
app/src/main/res/drawable/: background_button_text_view.xml  background_edit_text.xml  background_message_input.xml  background_message_simple.xml  background_my_message_simple.xml  badge_favourite.xml  bottom_line.xml  button_add_user_to_favourites.xml  button_close.xml  delimiter.xml  dot_indicator.xml  dot_selected_indicator.xml  file.xml  file_apk.xml  file_pdf.xml  file_zip.xml  folder.xml  ic_add.xml  ic_arrow_back.xml  ic_arrow_right.xml  ic_attach_file.xml  ic_audio.xml  ic_back.xml  ic_backspace.xml  ic_cancel.xml  ic_close.xml  ic_company.xml  ic_content_copy.xml  ic_data.xml  ic_decentralized.xml  ic_delete.xml  ic_delete_sweep.xml  ic_developer_mode.xml  ic_devices.xml  ic_document.xml  ic_done.xml  ic_done_all.xml  ic_done_white.xml  ic_edit.xml  ic_error.xml  (+65 more)
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_add_attachment.xml  activity_change_about.xml  activity_change_email.xml  activity_change_name.xml  activity_change_phone.xml  activity_channel.xml  activity_channel_info.xml  activity_chat.xml  activity_check_encryption_key.xml  activity_choose_server.xml  activity_contact_group_edit.xml  activity_contact_groups.xml  activity_contacts.xml  activity_conversation_gallery.xml  activity_create_group.xml  activity_create_poll.xml  activity_developer_options.xml  activity_dialog.xml  activity_edit_channel.xml  activity_edit_chat.xml  activity_edit_contact.xml  activity_email_enter.xml  activity_enter.xml  activity_enter_passphrase.xml  activity_enter_pin.xml  activity_files.xml  activity_get_phone_contacts.xml  activity_get_qr_code_for_login.xml  activity_global_search.xml  activity_group_info.xml  activity_intro.xml  activity_main.xml  activity_messages_settings.xml  activity_node_info.xml  activity_pdf_viewer.xml  (+69 more)
app/src/main/res/layout-land/: activity_check_encryption_key.xml
gradle/wrapper/: gradle-wrapper.properties
yencryptlib/: build.gradle
yencryptlib/src/main/: AndroidManifest.xml
yencryptlib/src/main/cpp/: CAsymmetricDecryptor.cpp  CAsymmetricDecryptor.h  CAsymmetricEncryptor.cpp  CAsymmetricEncryptor.h  CAsymmetricKeysGenerator.cpp  CAsymmetricKeysGenerator.h  CDecryptor.cpp  CDecryptor.h  CEncryptor.cpp  CEncryptor.h  CError.cpp  CError.h  CGenerator.cpp  CGenerator.h  CMakeLists.txt  COpenSSLAsymmetricKeysGenerator.cpp  COpenSSLAsymmetricKeysGenerator.h  COpenSSLRSADecryptor.cpp  COpenSSLRSADecryptor.h  COpenSSLRSAEncryptAsymmetricKeysGenerator.cpp  COpenSSLRSAEncryptAsymmetricKeysGenerator.h  COpenSSLRSAEncryptor.cpp  COpenSSLRSAEncryptor.h  CRandomOpenSSL.cpp  CRandomOpenSSL.h  CSign.cpp  CSign.h  CSignOpenSSLRSA.cpp  CSignOpenSSLRSA.h  CSymmetricOpenSSLGeneratorFromPassword.cpp  CSymmetricOpenSSLGeneratorFromPassword.h  CVerify.cpp  CVerify.h  CVerifyOpenSSLRSA.cpp  CVerifyOpenSSLRSA.h  CYDigestOpenSSL.cpp  CYDigestOpenSSL.h  CYException.cpp  CYException.h  CYSecurityFacad.cpp  (+14 more)
(+559 files in other folders)
